# faces-h

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  spike.yml
.github/workflows/: build.yml  ci.yml  deploy-landing.yml  release.yml
docs/: ARCHITECTURE.md  AUDIT-2026-07-04.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PRD.md  mockup.html
landing/: .htaccess  index.html  privacy.html  style.css
scripts/: smoke_test.py
sidecar/: config.py  faces-sidecar.spec  main.py  mypy.ini  pytest.ini  requirements-base.txt  requirements.txt
sidecar/api/: backups.py  corrections.py  faces.py  models.py  people.py  photos.py  queue.py  rotation.py  scan.py  search.py  transfer.py
sidecar/db/: database.py  schema.py
sidecar/index/: faiss_manager.py
sidecar/ml/: base.py  factory.py  insightface_recognizer.py
sidecar/services/: backup.py  clustering.py  face_index.py  image_cache.py  reeval.py  rotation.py  scanner.py
sidecar/tests/: conftest.py  test_blurry.py  test_clustering.py  test_config.py  test_database.py  test_duplicates.py  test_face_index.py  test_faiss_manager.py  test_health.py  test_image_cache.py  test_logging.py  test_missing_photos.py  test_ml_engine.py  test_models.py  test_parent_watchdog.py  test_performance.py  (+13 more)
src/: App.css  App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsi
src-tauri/src/: lib.rs  main.rs
(+97 files in other folders)
